tests/expectations/compiler/structs/empty_struct_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372112]: A struct must have at least one member.
    --> compiler-test:4:5
     |
   4 |     struct Bar {}
     |     ^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {
     | ^^^^^^^^^^^^
"""]
